--- a/src/main/resources/validation.properties
+++ b/src/main/resources/validation.properties
@@ -1,5 +1,5 @@
-NotEmpty=This field is required.
-Size.userForm.username=Please use between 6 and 32 characters.
-Duplicate.userForm.username=Someone already has that username.
-Size.userForm.password=Try one with at least 8 characters.
-Diff.userForm.passwordConfirm=These passwords don't match.
+NotEmpty=Tämä kenttä on pakollinen.
+Size.userForm.username=Käytä 6 - 32 merkkiä.
+Duplicate.userForm.username=käyttäjänimi on jo käytössä.
+Size.userForm.password=Kokeile vähintään 8 merkkiä.
+Diff.userForm.passwordConfirm=Salasanat eivät täsmää.
